[tool.poetry]
name = "qtp-services"
version = "0.1.0"
description = ""
authors = ["glaunay <pitooon@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pyproteinsext = "^3.1.0"
unigo         = {path = "./unigo", develop=true}
uniprot_redis = "^1.2.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
ipykernel = "^6.15.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
