[tool.poetry]
name = "qtp-services"
version = "0.1.0"
description = ""
authors = ["glaunay <pitooon@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
unigo               = {path = "./unigo", develop=true}
uniprot_redis       = {path = "./uniprot_redis", develop=true}
ensembl_redis       = {path = "./ensembl_redis", develop=true}
pyproteinsext       = {path = "./pyproteinsext", develop=true}
multiomics_services = {path = "./multiomics_services", develop=true}


[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
ipykernel = "^6.15.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
