[tool.poetry]
name = "multiomics_services"
version = "0.1.0"
description = ""
authors = ["Thibaut Peyric <thibaut.peyric@proton.me>"]

[tool.poetry.dependencies]
python = "^3.8"
docopt = "^0.6.2"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
pyrediscore = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"